Fix line breaks in <code> tags

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -78,6 +78,10 @@ header {
     }
 }
 
+code {
+    white-space: normal;
+}
+
 .about {
     text-align: center;
 }
